# q2-cutadapt

./: .copier-answers.yml  .gitignore  LICENSE  Makefile  pyproject.toml
conda-recipe/: meta.yaml
q2_cutadapt/: __init__.py  _demux.py  _examples.py  _trim.py  plugin_setup.py
q2_cutadapt/tests/: __init__.py  test_demux.py  test_trim.py
